--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
     <script>
       mocha.setup("bdd");
     </script>
-    <script src="http://chaijs.com/chai.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/chai/4.3.4/chai.min.js"></script>
     <script src="../dist/minordb.min.js"></script>
     <script src="config.js"></script>
     <script src="tdatabase.test.js"></script>
