--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
       mocha.setup("bdd");
     </script>
     <script src="https://cdn.bootcdn.net/ajax/libs/chai/4.3.4/chai.min.js"></script>
-    <script src="../dist/minordb.min.js"></script>
+    <script src="../dist/minordb.umd.min.js"></script>
     <script src="config.js"></script>
     <script src="tdatabase.test.js"></script>
     <script src="table.test.js"></script>
